+ BIG FIX on scrolling for projects archive and having images appear on safari when opening a project
 + RFefactoring css for projects archive on desktop up

 + Adjusting scroll-to code

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -822,6 +822,7 @@ body:not(:-moz-handler-blocked) fieldset {
   .subpage__content-body {
     padding-right: var(--level1);
     padding-left: var(--level1); 
+    padding-top: 0;
   }
 }
 @media screen and (min-width: 1400px) {
