--- a/src/styles/breakpoints.css
+++ b/src/styles/breakpoints.css
@@ -3,7 +3,7 @@
     --grid-small: 767px;
     --grid-medium: 768px;
     --grid-large: 1000px;
-    --grid-xlarge: 1681px;
+    --grid-xlarge: 1600px;
     --grid-widescreen: 2000px;
 
     --xsmall: min-width: 0;
